Hotfix: Fix client_base.conf

--- a/wg/client_base.conf
+++ b/wg/client_base.conf
@@ -4,6 +4,6 @@ PrivateKey = {client_private_key}
 
 [Peer]
 PublicKey = {server_public_key}
-AllowedIPs = {subnet}
+AllowedIPs = {allowed_ips}
 Endpoint = {server_ip}:{port}
 {client_keep_alive}
