Add vulnboxes configs creation

--- a/wg/client_base.conf
+++ b/wg/client_base.conf
@@ -1,6 +1,8 @@
 [Interface]
 Address = {client_network}
 PrivateKey = {client_private_key}
+PostUp = {client_post_up}
+PostDown = {client_post_down}
 
 [Peer]
 PublicKey = {server_public_key}
